--- a/gameengine-server/package.yaml
+++ b/gameengine-server/package.yaml
@@ -24,6 +24,7 @@ dependencies:
 - text >= 1.2 && < 1.3
 - filepath >= 1.4 && < 1.5
 - linear >= 1.21 && < 1.22
+- bytestring-lexing >= 0.5 && < 0.6
 
 library:
   source-dirs:
