Wrote loading of geometry information

--- a/gameengine-server/gameengine-server.cabal
+++ b/gameengine-server/gameengine-server.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 5f7632ced73c5a177f0f7ff7ce77838c2694c45d37b3697eadc0ea94060f8cbd
+-- hash: c0333d6e8de9d29f31db9e3c3552de21be6e9d031c0c12a280f454b892c82523
 
 name:           gameengine-server
 version:        0.1.0.0
@@ -65,6 +65,7 @@ library
     , network ==3.1.1.*
     , stm >=2.5
     , text ==1.2.*
+    , unordered-containers ==0.2.*
   default-language: Haskell2010
 
 executable gameengine-server
@@ -89,6 +90,7 @@ executable gameengine-server
     , network ==3.1.1.*
     , stm >=2.5
     , text ==1.2.*
+    , unordered-containers ==0.2.*
   default-language: Haskell2010
 
 test-suite gameengine-server-test
@@ -113,4 +115,5 @@ test-suite gameengine-server-test
     , network ==3.1.1.*
     , stm >=2.5
     , text ==1.2.*
+    , unordered-containers ==0.2.*
   default-language: Haskell2010
