--- a/gameengine-server/package.yaml
+++ b/gameengine-server/package.yaml
@@ -25,6 +25,7 @@ dependencies:
 - filepath >= 1.4 && < 1.5
 - linear >= 1.21 && < 1.22
 - bytestring-lexing >= 0.5 && < 0.6
+- unordered-containers >= 0.2 && < 0.3
 
 library:
   source-dirs:
