--- a/gameengine-server/package.yaml
+++ b/gameengine-server/package.yaml
@@ -30,6 +30,9 @@ dependencies:
 library:
   source-dirs:
   - src
+  ghc-options:
+  - -Wall
+  - -Wincomplete-uni-patterns
 
 executables:
   gameengine-server:
@@ -39,6 +42,8 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -Wall
+    - -Wincomplete-uni-patterns
     dependencies:
     - gameengine-server
 
