--- a/gameengine-server/package.yaml
+++ b/gameengine-server/package.yaml
@@ -42,7 +42,7 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
-    - -Wall
+    - -Werror
     - -Wincomplete-uni-patterns
     dependencies:
     - gameengine-server
