--- a/gameengine-server/package.yaml
+++ b/gameengine-server/package.yaml
@@ -26,6 +26,7 @@ dependencies:
 - linear >= 1.21 && < 1.22
 - bytestring-lexing >= 0.5 && < 0.6
 - unordered-containers >= 0.2 && < 0.3
+- vector >= 0.12 && < 0.13
 
 library:
   source-dirs:
