Added MotionDescriptor class for describing values that have an associated velocity and acceleration over time

--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -304,6 +304,7 @@
     <ClInclude Include="src\scene\model\Material.h" />
     <ClInclude Include="src\scene\model\Model.h" />
     <ClInclude Include="src\scene\model\Reflection.h" />
+    <ClInclude Include="src\scene\MotionDescriptor.h" />
     <ClInclude Include="src\scene\Nameable.h" />
     <ClInclude Include="src\scene\OrientedBoundingBox.h" />
     <ClInclude Include="src\scene\Referenceable.h" />
