--- a/gameengine-server/gameengine-server.cabal
+++ b/gameengine-server/gameengine-server.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 1a3861484d7291b9d7de8ce9800092f1ba99864fc0b5ca57f4af54a1e0e6cc7a
+-- hash: 75e30aaa397dc70820cebb80202e70d2c2307f79e64b981cb5fa335fad85bbf7
 
 name:           gameengine-server
 version:        0.1.0.0
@@ -68,6 +68,7 @@ library
     , network ==3.1.1.*
     , stm >=2.5
     , text ==1.2.*
+    , time ==1.9.*
     , unordered-containers ==0.2.*
     , vector ==0.12.*
   default-language: Haskell2010
@@ -94,6 +95,7 @@ executable gameengine-server
     , network ==3.1.1.*
     , stm >=2.5
     , text ==1.2.*
+    , time ==1.9.*
     , unordered-containers ==0.2.*
     , vector ==0.12.*
   default-language: Haskell2010
@@ -120,6 +122,7 @@ test-suite gameengine-server-test
     , network ==3.1.1.*
     , stm >=2.5
     , text ==1.2.*
+    , time ==1.9.*
     , unordered-containers ==0.2.*
     , vector ==0.12.*
   default-language: Haskell2010
