--- a/gameengine-server/package.yaml
+++ b/gameengine-server/package.yaml
@@ -27,6 +27,7 @@ dependencies:
 - bytestring-lexing >= 0.5 && < 0.6
 - unordered-containers >= 0.2 && < 0.3
 - vector >= 0.12 && < 0.13
+- time >= 1.9 && < 1.10
 
 library:
   source-dirs:
