Added stack GHCi task to gameengine-server VS Code file

--- a/gameengine-server/.vscode/tasks.json
+++ b/gameengine-server/.vscode/tasks.json
@@ -30,6 +30,11 @@
             "type": "shell",
             "command": "stack build --dry-run",
             "problemMatcher": []
+        },
+        {
+            "label": "Open GHCi",
+            "type": "shell",
+            "command": "stack ghci --no-load --no-copy-bins"
         }
     ]
 }
