Added blank problem matcher for GHCi task

--- a/gameengine-server/.vscode/tasks.json
+++ b/gameengine-server/.vscode/tasks.json
@@ -34,7 +34,8 @@
         {
             "label": "Open GHCi",
             "type": "shell",
-            "command": "stack ghci --no-load --no-copy-bins"
+            "command": "stack ghci --no-load --no-copy-bins",
+            "problemMatcher": []
         }
     ]
 }
