Added groundwork for unit tests

--- a/gameengine-server/.vscode/tasks.json
+++ b/gameengine-server/.vscode/tasks.json
@@ -36,6 +36,12 @@
             "type": "shell",
             "command": "stack ghci --no-load --no-copy-bins",
             "problemMatcher": []
+        },
+        {
+            "label": "Build and test",
+            "type": "shell",
+            "command": "stack test --no-copy-bins",
+            "problemMatcher": []
         }
     ]
 }
