--- a/gameengine-server/gameengine-server.cabal
+++ b/gameengine-server/gameengine-server.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 49506399dcd80b5d9b77e4802463c30e78a442912f021d03ae730aed880c4153
+-- hash: 68ede1fb63bff084b7885a96d8a5bdb6d846ba157fd52b20c7f088410586be46
 
 name:           gameengine-server
 version:        0.1.0.0
@@ -112,7 +112,7 @@ test-suite gameengine-server-test
       Paths_gameengine_server
   hs-source-dirs:
       test
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns
   build-depends:
       HUnit ==1.6.*
     , aeson ==1.5.*
