Changed build task to also build tests so that the build isn't invalidated every time you switch between running tests and the server

--- a/gameengine-server/.vscode/tasks.json
+++ b/gameengine-server/.vscode/tasks.json
@@ -20,7 +20,7 @@
         {
             "label": "Build",
             "type": "shell",
-            "command": "stack build",
+            "command": "stack build --test --no-run-tests",
             "problemMatcher": [
                 {
                     "owner": "haskell",
