--- a/gameengine-server/package.yaml
+++ b/gameengine-server/package.yaml
@@ -29,12 +29,13 @@ dependencies:
 - vector >= 0.12 && < 0.13
 - time >= 1.9 && < 1.10
 
+ghc-options:
+- -Wall
+- -Wincomplete-patterns
+
 library:
   source-dirs:
   - src
-  ghc-options:
-  - -Wall
-  - -Wincomplete-uni-patterns
 
 executables:
   gameengine-server:
@@ -44,8 +45,6 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
-    - -Wall
-    - -Wincomplete-uni-patterns
     dependencies:
     - gameengine-server
 
@@ -57,8 +56,6 @@ tests:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
-    - -Wall
-    - -Wincomplete-uni-patterns
     dependencies:
     - gameengine-server
     - HUnit >= 1.6 && < 1.7
